--- a/Task-Management-Backend/package.json
+++ b/Task-Management-Backend/package.json
@@ -9,8 +9,11 @@
   "author": "Lakshmi Sowmya",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7"
   }
