Added Authentication for both frontend and backend

--- a/Task-Management-Backend/package.json
+++ b/Task-Management-Backend/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "description": "task manager that allows users to create projects and tasks",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Lakshmi Sowmya",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7"
   }
