Front end for authentication

--- a/Task-Management-Backend/.env
+++ b/Task-Management-Backend/.env
@@ -1,1 +1,3 @@
-JWT_SECRET="brother"
+PORT="5000"
+CONNECTION_URL="mongodb+srv://harshaakoliya20:YxfuGxCbIFZ9u6gC@cluster0.wxehh.mongodb.net/"
+JWT_SECRET="This can be anyting like test"
