--- a/Task-Management-Backend/package.json
+++ b/Task-Management-Backend/package.json
@@ -4,7 +4,8 @@
   "description": "task manager that allows users to create projects and tasks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon server"
   },
   "author": "Lakshmi Sowmya",
   "license": "ISC",
