--- a/.github/PR_Template.yml
+++ b/.github/PR_Template.yml
@@ -22,7 +22,7 @@ Please include a summary of the changes and the related issue number if applicab
 
 ## Checklist
 
-- [ ] I have read the [contributing guidelines](CONTRIBUTING.md).
+- [ ] I have read the [contributing guidelines](CONTRIBUTING).
 - [ ] My code follows the style guidelines of this project.
 - [ ] I have performed a self-review of my code.
 - [ ] I have commented my code, particularly in hard-to-understand areas.
