Refactor backend: remove duplicates, convert to ES modules, and standardize error handling.

--- a/Task-Management-Backend/.env
+++ b/Task-Management-Backend/.env
@@ -1,1 +1,4 @@
 JWT_SECRET="brother"
+
+MONGODB_URI=mongodb+srv://username:password@cluster0.zn5ekhe.mongodb.net
+# MONGODB_URI=mongodb://localhost:27017/taskmanager"; 
