--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -19,6 +19,10 @@ body:
     validations:
       required: true
 
+
+  - type: checkboxes
+    id: terms
+    attributes:
       label: Record
       options:
         - label: "I agree to follow this project's Code of Conduct"
