backen working correctly testiong user api & login api not work correctly

--- a/Task-Management-Backend/.env
+++ b/Task-Management-Backend/.env
@@ -1,4 +1,2 @@
 JWT_SECRET="brother"
-
-MONGODB_URI=mongodb+srv://username:password@cluster0.zn5ekhe.mongodb.net
-# MONGODB_URI=mongodb://localhost:27017/taskmanager"; 
+MONGODB_URI="mongodb+srv://umakant3525:qAi032cCGysFexAg@cluster0.va6ol.mongodb.net"
