--- a/Task-Management-Backend/package.json
+++ b/Task-Management-Backend/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev"   : "npx nodemon server.js"
+    "dev": "npx nodemon server.js"
   },
   "author": "Lakshmi Sowmya",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
